adding fix for R, and merging master api-generator
