# go/api/openapi.yaml
@@ -1880,6 +1880,40 @@ paths:
         that are included within the given metadata.
       tags:
       - dataset
+  /datastore/organization-database/{organizationId}/{tableId}/external-database-table:
+    get:
+      operationId: getExternalDatabaseTable
+      parameters:
+      - explode: false
+        in: path
+        name: organizationId
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      - explode: false
+        in: path
+        name: tableId
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationExternalDatabaseTable'
+          description: Success
+      security:
+      - openlattice_auth: []
+      - http_auth: []
+      summary: Gets an OrganizationExternalDatabaseTable object, which represents
+        an organization's table in an external database.
+      tags:
+      - dataset
   /datastore/organization-database/{organizationId}/{tableName}/external-database-table:
     delete:
       operationId: deleteExternalDatabaseTable
@@ -1908,38 +1942,6 @@ paths:
       summary: Deletes an OrganizationExternalDatabaseTable object, which represents
         an organization's table in an external database. This deletes both the object
         and the table in the database. It is a hard delete.
-      tags:
-      - dataset
-    get:
-      operationId: getExternalDatabaseTable
-      parameters:
-      - explode: false
-        in: path
-        name: organizationId
-        required: true
-        schema:
-          format: uuid
-          type: string
-        style: simple
-      - explode: false
-        in: path
-        name: tableName
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/OrganizationExternalDatabaseTable'
-          description: Success
-      security:
-      - openlattice_auth: []
-      - http_auth: []
-      summary: Gets an OrganizationExternalDatabaseTable object, which represents
-        an organization's table in an external database.
       tags:
       - dataset
     patch:
@@ -2004,6 +2006,49 @@ paths:
       summary: Deletes multiple OrganizationExternalDatabaseColumn objects and the
         columns they represent within an organization's table in an external database.
         It is a hard delete
+      tags:
+      - dataset
+  /datastore/organization-database/{organizationId}/{tableId}/{rowCount}/data:
+    get:
+      operationId: getExternalDatabaseTableData
+      parameters:
+      - explode: false
+        in: path
+        name: organizationId
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      - explode: false
+        in: path
+        name: tableId
+        required: true
+        schema:
+          format: uuid
+          type: string
+        style: simple
+      - explode: false
+        in: path
+        name: rowCount
+        required: true
+        schema:
+          type: integer
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: object
+                type: object
+          description: Success
+      security:
+      - openlattice_auth: []
+      - http_auth: []
+      summary: Gets an OrganizationExternalDatabaseTable object with user specified
+        number of rows of raw data for an organization
       tags:
       - dataset
   /datastore/data:
@@ -3310,7 +3355,7 @@ paths:
       summary: Get the user id for the given email address.
       tags:
       - principal
-  /datastore/principals/users/search/"{searchQuery}":
+  /datastore/principals/users/search/{searchQuery}:
     get:
       operationId: searchAllUsers
       parameters:
@@ -8562,6 +8607,7 @@ components:
           type: string
         credential:
           type: string
+      type: object
     SearchResult_hits:
       example:
         propertyTypes:
@@ -8618,12 +8664,14 @@ components:
           type: array
         entitySet:
           $ref: '#/components/schemas/EntitySet'
+      type: object
     DataEdge_data:
       properties:
         additionalProperties:
           items:
             type: string
           type: array
+      type: object
   securitySchemes:
     http_auth:
       bearerFormat: JWT
