# go/api_principal.go
@@ -15,6 +15,7 @@ import (
 	_ioutil "io/ioutil"
 	_nethttp "net/http"
 	_neturl "net/url"
+	_bytes "bytes"
 	"strings"
 )
 
@@ -88,6 +89,7 @@ func (a *PrincipalApiService) GetAllUsers(ctx _context.Context) (map[string]Auth
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarReturnValue, localVarHTTPResponse, err
 	}
@@ -174,6 +176,7 @@ func (a *PrincipalApiService) GetCurrentRoles(ctx _context.Context) ([]Securable
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarReturnValue, localVarHTTPResponse, err
 	}
@@ -260,6 +263,7 @@ func (a *PrincipalApiService) GetMaterializedViewAccount(ctx _context.Context) (
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarReturnValue, localVarHTTPResponse, err
 	}
@@ -349,6 +353,7 @@ func (a *PrincipalApiService) GetUser(ctx _context.Context, userId string) (Auth
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarReturnValue, localVarHTTPResponse, err
 	}
@@ -390,7 +395,7 @@ func (a *PrincipalApiService) SearchAllUsers(ctx _context.Context, searchQuery s
 	)
 
 	// create path and map variables
-	localVarPath := a.client.cfg.BasePath + "/datastore/principals/users/search/"{searchQuery}""
+	localVarPath := a.client.cfg.BasePath + "/datastore/principals/users/search/{searchQuery}"
 	localVarPath = strings.Replace(localVarPath, "{"+"searchQuery"+"}", _neturl.PathEscape(parameterToString(searchQuery, "")) , -1)
 
 	localVarHeaderParams := make(map[string]string)
@@ -438,6 +443,7 @@ func (a *PrincipalApiService) SearchAllUsers(ctx _context.Context, searchQuery s
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarReturnValue, localVarHTTPResponse, err
 	}
@@ -527,6 +533,7 @@ func (a *PrincipalApiService) SearchAllUsersByEmail(ctx _context.Context, emailA
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarReturnValue, localVarHTTPResponse, err
 	}
@@ -611,6 +618,7 @@ func (a *PrincipalApiService) SyncCallingUser(ctx _context.Context) (*_nethttp.R
 
 	localVarBody, err := _ioutil.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = _ioutil.NopCloser(_bytes.NewBuffer(localVarBody))
 	if err != nil {
 		return localVarHTTPResponse, err
 	}
